# raspi-info-display

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  build_package.sh  info-display_0.1.0-1_arm64.deb  info-display_0.1.1-1_arm64.deb
debian/: changelog  copyright  postinst  postrm  prerm  rules
debian/man/: info_display.1
debian/systemd/: info-display.service
scripts/: test-tca9548a.sh
src/: app.rs  cli.rs  config.rs  display.rs  errors.rs  lib.rs  main.rs  screen_factory.rs  screen_manager.rs  screens.rs  tca9548a.rs  telemetry.rs
src/system_info/: hardware.rs  mod.rs  network.rs  sensors.rs  storage.rs  system.rs
